--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
+@import url(https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Domine:wght@400..700&family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Norican&display=swap);
+
 body { 
-    font-family: Arial, sans-serif; 
+    font-family: Arial, Helvetica, sans-serif; 
     margin: 0; 
     padding: 0; 
     background-color: #f8f1e5; 
@@ -59,6 +61,7 @@ nav a {
 }
 
 footer {
+    text-decoration: none;
     background-color: #8b0000;
     color: white;
     text-align: center;
@@ -66,8 +69,10 @@ footer {
 }
 
 .img-banner {
-    width: 100%;
-    height: auto;
+    display: block;
+    margin: auto;
+    clip-path: ellipse(50% 40%);
+    width: 25%;
 }
 
 iframe {
